# causal-inference-in-python-code

./: .gitignore  README.md  main.py  pyproject.toml
causal-inference-in-python/: 01-Introduction-To-Causal-Inference.ipynb  02-Randomised-Experiments-and-Stats-Review.ipynb  03-Graphical-Models.ipynb  04-The-Unreasonable-Effectiveness-of-Linear-Regression.ipynb  05-Propensity-Score.ipynb  06-Effect-Heterogeneity.ipynb  07-Meta-Learners.ipynb  08-Difference-in-Differences.ipynb  09-Synthetic-Control.ipynb  10-Geo-and-Switchback-Experiments.ipynb  11-Non-Compliance-and-Instruments.ipynb
