[project]
name = "causal-inference-in-python-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.3",
    "cycler>=0.12.1",
    "fklearn>=4.0.1",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "linearmodels>=6.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "toolz<1.0",
]
